--- a/views/loans/loanforeclosure.html
+++ b/views/loans/loanforeclosure.html
@@ -78,7 +78,7 @@
                     value="22 Sep 2018" max="restrictDate" is-open="opened"/>
                 </div>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label class="control-label col-sm-2">Bank Code<span class="required">*</span></label>
                 <div class="col-sm-3">
                     <input type="text" value="1234" class="form-control" number-format/>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-sm-3">
                 </div>
-            </div>
+            </div> -->
             <div class="form-group">
                 <label class="control-label col-sm-2">Payment Type<span class="required"></span></label>
                 <div class="col-sm-3">
