--- a/views/clients/editindividual.html
+++ b/views/clients/editindividual.html
@@ -1,6 +1,6 @@
 <div class="content-container">
     <ul class="breadcrumb">
-        <li><a href="#/clients">Clients</a></li>
+        <!-- <li><a href="#/clients">Clients</a></li> -->
         <!-- <li><a href="#/viewclient/:id"></a>View Client</a></li> -->
         <li class="active">Edit Individual</li>
     </ul>
@@ -75,7 +75,121 @@
                     </div>
     
                 </div>
-    
+                <div class="form-group">
+                        <div class="form-group">
+                           <div class="control-label col-sm-2">
+                              <h3><strong>{{ 'label.input.address' | translate }}</strong>&nbsp;<a ng-click="addAddress()" ><i class="fa fa-plus" title="{{'label.button.addAddress' | translate}}"></i></a></h3>
+                           </div>
+                        </div>
+                           <div class="form-group" >
+                              <div class="control-label col-sm-2">
+                                 <label>{{ 'label.input.addressType' | translate }}<span class="required">*</span></label>
+                              </div>
+                              <div class="col-sm-3"  >
+                                 <select chosen="addressTypes" name="addressType" ng-model="addressArray[$index].addressTypeId"  class="form-control"
+                                    ng-options="addressType.id as addressType.name for addressType in addressTypes track by addressType.id"
+                                    value="addressTypeId" required late-validate></select>
+                              </div>
+                              <div class = "col-sm-2">
+                                 <form-validate valattributeform="createclientform" valattribute="addressType"/>
+                              </div>
+                              <a ng-click="removeAddress($index)" uib-tooltip="{{'label.remove.row' | translate}}"><i class="fa fa-times"></i></a>
+                           </div>
+                           <div class="form-group">
+                              <div class="control-label col-sm-2">
+                                 <label>{{ 'label.input.street' | translate }}<span class="required">*</span></label>
+                              </div>
+                              <div class="col-sm-3">
+                                 <input type="text" name="street"  ng-model="addressArray[$index].street"  class="form-control" required late-validate/>
+                              </div>
+                              <div class = "col-sm-2">
+                                 <form-validate valattributeform="createclientform" valattribute="street"/>
+                              </div>
+                           </div>
+                           <div class="form-group">
+                              <label class="control-label col-sm-2" >{{ 'label.input.addressline1' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="addressline1" ng-model="addressArray[$index].addressLine1"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group">
+                              <label class="control-label col-sm-2" >{{ 'label.input.addressline2' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="addressline2" ng-model="addressArray[$index].addressLine2"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{ 'label.input.addressline3' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="addressline3" ng-model="addressArray[$index].addressLine3"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{ 'label.input.city' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text" name="city" ng-model="addressArray[$index].city"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{ 'label.input.town_village' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="town_village" ng-model="addressArray[$index].townVillage"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{ 'label.input.county_district' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="county_district" ng-model="addressArray[$index].countyDistrict"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <div class="control-label col-sm-2">
+                                 <label>{{ 'label.input.state_province' | translate }}</label>
+                              </div>
+                              <div class="col-sm-3" >
+                                 <select chosen="stateOptions"  ng-model="addressArray[$index].stateProvinceId"  class="form-control"
+                                    ng-options="stateOption.id as stateOption.name for stateOption in stateOptions track by stateOption.id"
+                                    value="stateProvinceId"></select>
+                              </div>
+                           </div>
+                           <div>
+                           </div>
+                           <div class="form-group" >
+                              <div class="control-label col-sm-2">
+                                 <label>{{ 'label.input.country' | translate }}</label>
+                              </div>
+                              <div class="col-sm-3" >
+                                 <select chosen="countryOptions"  ng-model="addressArray[$index].countryId"  class="form-control"
+                                    ng-options="countryOption.id as countryOption.name for countryOption in countryOptions track by countryOption.id"
+                                    value="countryId"></select>
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{ 'label.input.postal_code' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="postal_code" ng-model="addressArray[$index].postalCode"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{ 'label.input.latitude' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="latitude" ng-model="addressArray[$index].latitude"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{ 'label.input.longitude' | translate }}</label>
+                              <div class="col-sm-3">
+                                 <input type="text"  name="longitude" ng-model="addressArray[$index].longitude"  class="form-control">
+                              </div>
+                           </div>
+                           <div class="form-group" >
+                              <label class="control-label col-sm-2" >{{'label.input.is_active' | translate}} </label>
+                              <div class="col-sm-3">
+                                 <input class="input-mini-small" type="checkbox"
+                                    ng-model="addressArray[$index].isActive">
+                              </div>
+                           </div>
+                     </div>
     
     
                 <div class="col-md-offset-3" >
