--- a/views/loans/loanaccountactions.html
+++ b/views/loans/loanaccountactions.html
@@ -289,7 +289,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label class="control-label col-sm-2">{{ 'label.anchor.showpaymentdetails' | translate}}</label>
                     <div class="col-sm-3">
                         <a class="btn btn-primary" ng-click="showPaymentDetails=!showPaymentDetails">
@@ -297,7 +297,7 @@
                             <i ng-show="!showPaymentDetails" class="fa fa-plus "></i>
                         </a>
                     </div>
-                </div>
+                </div> -->
                 <div uib-collapse="!showPaymentDetails">
                     <div class="form-group">
                         <label class="control-label col-sm-2" for="accountNumber">{{ 'label.input.accnum' |
